force-app/main/default/objects/Staffing_at_Events__c/Staffing_at_Events__c.object-meta.xml
<CustomObject>
    <label>Staffing at Events</label>
    <nameField>
        <displayFormat>Staffing-{00000}</displayFormat>
        <label>Staffing at Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staffing at Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>