force-app/main/default/objects/Staffing_at_Events__c/fields/Job_at_Event__c.field-meta.xml
<CustomField>
    <fullName>Job_at_Event__c</fullName>
    <label>Job at Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Staff_Screening_Jobs</valueSetName>
    </valueSet>
</CustomField>