force-app/main/default/objects/Staffing_at_Events__c/fields/UtFC_Film_Event__c.field-meta.xml
<CustomField>
    <fullName>UtFC_Film_Event__c</fullName>
    <label>UtFC Film Event</label>
    <referenceTo>UtFC_Film_Event__c</referenceTo>
    <relationshipLabel>Staffing at Events</relationshipLabel>
    <relationshipName>Staffing_at_Events</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>